[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/components/player/control_manager/ControlManager.gd" type="Script" id=1]
[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[node name="ControlManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Takeoff" type="Button" parent="."]
visible = false
margin_left = 96.0
margin_top = 960.0
margin_right = 224.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 4 )
text = "Полёт"

[node name="Message" type="Label" parent="Takeoff"]
margin_left = -96.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.929412, 0.929412, 0.929412, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "Пробел для активации"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Jumping" type="Button" parent="."]
visible = false
margin_left = 97.0
margin_top = 960.0
margin_right = 225.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 5 )
text = "Прыжок"

[connection signal="button_down" from="Takeoff" to="." method="_on_Takeoff_button_down"]
[connection signal="button_up" from="Takeoff" to="." method="_on_Takeoff_button_up"]
[connection signal="button_down" from="Jumping" to="." method="_on_Jumping_button_down"]
